# PoseApp

./: .gitignore  ALGORITHMS.md  ARCHITECTURE.md  Compliance.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
app/: main.py
assets/templates/: arm_abduction.json  calf_raise.json  forward_flexion.json  jumping_jack.json  squat_rule.json
docs/source/: conf.py  index.rst
licenses/: APP_LICENSE.txt  THIRD_PARTY.md
packaging/linux/: build_appimage.sh
scripts/: build_linux.sh  build_windows.ps1  extract_gif_movenet.py
sessions/20251020T052224/: summary.json
sessions/20251020T184535/: angles.csv  gait.csv  raw_keypoints.json
sessions/20251020T184603/: angles.csv  gait.csv
sessions/20251020T185725/: angles.csv  gait.csv  raw_keypoints.json  summary.json
sessions/20251020T185756/: angles.csv  gait.csv
sessions/20251020T193232/: angles.csv  gait.csv  raw_keypoints.json  summary.json
sessions/20251020T193319/: angles.csv  gait.csv  raw_keypoints.json  summary.json
sessions/20251020T193323/: angles.csv  gait.csv  raw_keypoints.json  summary.json
sessions/20251020T194432/: angles.csv  gait.csv  raw_keypoints.json  summary.json
sessions/20251020T194511/: angles.csv  gait.csv  raw_keypoints.json  score_card.csv  summary.json
sessions/20251021T163432/: summary.json
sessions/20251021T163525/: angles.csv  gait.csv  raw_keypoints.json  summary.json
sessions/20251021T163554/: gait.csv  raw_keypoints.json  summary.json
sessions/20251021T163556/: gait.csv  raw_keypoints.json  summary.json
sessions/20251021T163645/: angles.csv  gait.csv  (+2 more)
(+122 files in other folders)
